--- a/css/unicons.css
+++ b/css/unicons.css
@@ -422,6 +422,7 @@
 .uil-down-arrow:before { content: '\e96c'; } /* '' */
 .uil-download-alt:before { content: '\e96d'; } /* '' */
 .uil-dribbble:before { content: '\e96e'; } /* '' */
+.uil-linkedin:before { content: '\e96e'; } /* '' */
 .uil-drill:before { content: '\e96f'; } /* '' */
 .uil-dropbox:before { content: '\e970'; } /* '' */
 .uil-dumbbell:before { content: '\e971'; } /* '' */
