--- a/css/tooplate-style.css
+++ b/css/tooplate-style.css
@@ -251,7 +251,7 @@ b, strong {
   bottom: 1px;
 }
 .navbar-toggler .navbar-toggler-icon {
-  background: #212121;
+  background: #c3c3c3;
   display: block;
   width: 100%;
   height: 2px;
@@ -290,20 +290,27 @@ b, strong {
 }
 
 .dark-mode {
-  background: #0c0c0d;
+  background: #1a1344;
 }
 .dark-mode .navbar-light .navbar-nav .nav-link {
   color: rgba(255, 255, 255, 0.8);
 }
+
+@media (max-width: 600px){
+  .dark-mode .navbar-light .navbar-nav .nav-link {
+    color: rgba(63, 62, 62, 0.8);
+  }
+}
+
 .dark-mode .navbar-light .navbar-nav .nav-link:hover {
   color: #ffc200;
 }
 .dark-mode .navbar[class*="headroom--not-top"] {
-  background: #0c0c0d;
+  background: #1a1344;
   border-bottom: 1px solid #1f1f1f;
 }
 .dark-mode .small-text {
-  background: #0d0c15;
+  background: #3c3a3a;
   color: #ffffff;
 }
 .dark-mode .feature-card .uil,
@@ -568,6 +575,12 @@ b, strong {
     vertical-align: top;
   }
 }
+#skills{
+  margin-top: 12px;
+}
+.skills-text{
+  display: flex;
+}
 
 .skill-text {
   color: #474559;
@@ -577,4 +590,114 @@ b, strong {
   display: inline-block;
   margin-left: 15px;
   list-style-type:disc;
+}
+
+
+@media (max-width: 600px){
+  .skill-text {
+    color: #474559;
+    /* font-weight: bold; */
+    font-size: 12px;
+    vertical-align: middle;
+    display: inline-block;
+    margin-left: 15px;
+    list-style-type:disc;
+  }
+
+  .skills-text {
+    margin-left: -43px;
+  }
+
+  .social-links {
+    padding-left: -40px;
+  }
+ 
+}
+
+
+.skill-text li {
+  margin: 20px;
+}
+.skill-text-2 li {
+  margin: 20px;
+}
+
+.skill-icon{
+  height: 40px;
+}
+
+.project{
+  display: flex;
+  flex-direction: column;
+}
+
+.project-item{
+  display: flex ;
+  margin: 10px;
+  padding: 80px;
+  border: #ffc200 solid 1px;
+  justify-content: space-between;
+  border-radius: 8px;
+
+}
+
+.code-icon{
+  height: 20px;
+  width: auto;
+}
+
+.pro-img{
+  height: 200px;
+  width: auto;
+  border: black solid 1px;
+  border-radius: 8px;
+}
+
+@media screen and (max-width: 600px) {
+  .pro-img {
+    width: 190px;
+    height: 120px;
+    border: black solid 1px;
+    margin-top: 39px;
+    border-radius: 5%;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .project-item {
+    display: flex ;
+    margin: 15px;
+    padding: 10px;
+    border: #ffc200 solid 1px;
+    justify-content: center;
+    border-radius: 5%;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .show-pro  {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+}
+
+
+@media screen and (max-width: 600px) {
+  .show-pro button {
+    height: 30px;
+    width: 80px;
+    font-size: small;
+    border-radius: 5% ;
+    border: solid 0.1px gery;
+    overflow: hidden;
+  }
+}
+
+
+.show-pro button{
+  margin:93px 13px;
+  border-radius: 5% ;
+  border: solid 0.01px gery;
+  overflow: hidden;
 }
